# kde-fan-control

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  policykit-1_126-2ubuntu0.1.debian.tar.xz
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/debug/: backward-compat-config-deserialize.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/milestones/v1.0-phases/02-safe-enrollment-lifecycle-recovery/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-05-PLAN.md  02-CONTEXT.md  02-HUMAN-UAT.md  02-RESEARCH.md  02-REVIEW.md  02-VERIFICATION.md
.planning/milestones/v1.0-phases/03-temperature-control-runtime-operations/: 03-02-SUMMARY.md  03-03-SUMMARY.md  03-05-PLAN.md  03-CONTEXT.md  03-RESEARCH.md  03-REVIEW-FIX-M2-M3.md  03-REVIEW-FIX.md  03-REVIEW.md
.planning/milestones/v1.0-phases/04-kde-gui-tray-experience/: 04-01-SUMMARY.md  04-02-PLAN.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-06-PLAN.md  04-07-PLAN.md  04-08-PLAN.md  04-CONTEXT.md  04-RESEARCH.md  04-UAT-CHECKLIST.md  04-UAT-RESULTS.md  04-VERIFICATION.md
.planning/phases/01-hardware-inventory-visibility/: 1-UAT.md
.planning/phases/02-safe-enrollment-lifecycle-recovery/: 02-02-SUMMARY.md  02-04-SUMMARY.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-HUMAN-UAT.md  02-REVIEW.md  02-VERIFICATION.md
.planning/phases/03-temperature-control-runtime-operations/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-03-PLAN.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-SUMMARY.md  03-CONTEXT.md  03-REVIEW.md  03-UAT.md  03-VERIFICATION.md
.planning/phases/04-kde-gui-tray-experience/: 04-01-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-REVIEW.md  04-UI-SPEC.md  04-VALIDATION.md
.planning/quick/260412-grd-re-verify-phase-4-with-built-gui-applica/: 260412-grd-PLAN.md  260412-grd-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: control.rs  friendly.rs  inventory.rs  lifecycle.rs  mod.rs  status.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  control.rs  inventory.rs  lib.rs  lifecycle.rs  overview.rs  validation.rs
crates/core/src/lifecycle/: fallback.rs  mod.rs  owned.rs  reassess.rs  reconcile.rs  runtime.rs  state.rs  time.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: args.rs  lib.rs  main.rs  state.rs  test_support.rs  time.rs
crates/daemon/src/app/: background.rs  mod.rs  shutdown.rs  startup.rs
crates/daemon/src/control/: autotune.rs  fan_loop.rs  helpers.rs  mod.rs  recovery.rs  sampling.rs  supervisor.rs
crates/daemon/src/dbus/: auth.rs  constants.rs  control.rs  helpers.rs  inventory.rs  lifecycle.rs  lifecycle_apply.rs  mod.rs  signals.rs
crates/daemon/src/safety/: fallback.rs  mod.rs  ownership.rs  panic_hook.rs
crates/fallback/: Cargo.toml
crates/fallback/src/: main.rs
debian/: changelog  control  copyright  debhelper-build-stamp  kde-fan-control.postrm.debhelper  postinst  postrm  rules
debian/.debhelper/kde-fan-control/: dbgsym-build-ids
debian/.debhelper/kde-fan-control/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/kde-fan-control/dbgsym-root/usr/share/doc/: kde-fan-control-dbgsym
docs/: SECURITY.md  architecture.md  borderline-review.md  building.md  cli-reference.md  configuration.md  dbus-api.md  developer-install.md  lifecycle-split-plan.md  refactor-roadmap.md  safety-model.md
gui/: CMakeLists.txt
gui/data/: kdefancontrol.notifyrc
gui/qml/: FanDetailPage.qml  InventoryPage.qml  Main.qml  OverviewPage.qml  TrayPopover.qml  WizardDialog.qml
gui/qml/components/: MultiSelectComboBox.qml  OutputBar.qml  PidField.qml  RenameDialog.qml  StateBadge.qml  TemperatureDisplay.qml
gui/qml/delegates/: FanRowDelegate.qml  FanTrayDelegate.qml
gui/src/: daemon_interface.cpp  daemon_interface.h  main.cpp  notification_handler.cpp  notification_handler.h  status_monitor.cpp  status_monitor.h  tray_icon.cpp  tray_icon.h  types.cpp  types.h
gui/src/models/: draft_model.cpp  draft_model.h  fan_list_model.cpp  fan_list_model.h  lifecycle_event_model.cpp  lifecycle_event_model.h  overview_fan_row.h  overview_model.cpp  overview_model.h  sensor_list_model.cpp  sensor_list_model.h
packaging/: org.kde.fancontrol.desktop  org.kde.fancontrol.metainfo.xml
packaging/dbus/: org.kde.FanControl.conf  org.kde.FanControl.service
packaging/man/: kde-fan-control-daemon.8  kde-fan-control-gui.1  kde-fan-control.1
packaging/polkit/: org.kde.fancontrol.policy
packaging/systemd/: kde-fan-control-daemon.service
policykit-1-126/.pc/: applied-patches
policykit-1-126/debian/: NEWS  changelog  clean  control  copyright  gbp.conf  libpolkit-agent-1-dev.install  libpolkit-gobject-1-dev.install  pkexec.install  pkexec.postinst  policykit-1-doc.doc-base  polkitd.dirs  polkitd.examples  polkitd.install  polkitd.links  polkitd.maintscript  polkitd.postinst  polkitd.xmlcatalogs  rules  watch
policykit-1-126/debian/patches/: CVE-2025-7519.patch  CVE-2026-4897.patch
policykit-1-126/debian/tests/: control  pkexec  polkitd  polkitd-root
policykit-1-126/debian/upstream/: metadata
policykit-1-126/src/polkitagent/: polkitagenthelperprivate.c
scripts/: dev-install.sh
