[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/daemon",
    "crates/fallback",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "1.0.0"

[workspace.dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
toml = "0.8"
dirs = "6"
sd-notify = "0.5"

[profile.release]
strip = true
opt-level = 3
lto = true
